--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Tutorial of how to create a REST API using ExpressJS",
   "main": "dist/app.js",
   "scripts": {
+    "tsc": "tsc",
+    "start" : "npm run tsc && node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +26,11 @@
   "homepage": "https://github.com/makinhs/expressjs-api-tutorial#readme",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "source-map-support": "^0.5.16",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5"
   }
 }
