--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "tsc": "tsc",
-    "start" : "npm run tsc && node ./dist/app.js",
+    "start": "npm run tsc && node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/makinhs/expressjs-api-tutorial#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "argon2-pass": "^1.0.2",
+    "express": "^4.17.1",
+    "short-uuid": "^3.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
