feat(): testings with mocha and supertest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,12 @@
     "strict": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
-  }
+  },
+  "include": [
+    "app/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "test/**/*.ts"
+  ]
 }
