--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "tsc": "tsc",
     "start": "npm run tsc && node ./dist/app.js",
+    "test-dev": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/**/*.test.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,8 +31,18 @@
     "short-uuid": "^3.1.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.8",
     "@types/express": "^4.17.2",
+    "@types/mocha": "^7.0.1",
+    "@types/mongoose": "^5.7.0",
+    "@types/node": "^13.5.2",
+    "@types/supertest": "^2.0.8",
+    "chai": "^4.2.0",
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2",
     "source-map-support": "^0.5.16",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
