update(): mongoose and Users

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,21 @@ services:
     build: .
     volumes:
       - ./api:/app
+    links:
+      - mongo
     networks:
       - backend
     ports:
       - "3000:3000"
+
+  mongo:
+    image: mongo
+    volumes:
+      - ./data:/data/db
+    networks:
+      - backend
+    ports:
+      - "27017:27017"
 
 networks:
   backend:
