--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   "dependencies": {
     "argon2-pass": "^1.0.2",
     "express": "^4.17.1",
+    "express-winston": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
-    "short-uuid": "^3.1.1"
+    "short-uuid": "^3.1.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.8",
