--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "argon2": "^0.27.1",
     "express": "^4.17.1",
     "express-winston": "^4.0.2",
+    "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11",
     "short-uuid": "^3.1.1",
@@ -40,6 +41,7 @@
     "@types/argon2": "^0.15.0",
     "@types/chai": "^4.2.8",
     "@types/express": "^4.17.2",
+    "@types/helmet": "^4.0.0",
     "@types/mocha": "^7.0.1",
     "@types/mongoose": "^5.7.0",
     "@types/node": "^13.5.2",
